@@ -39,6 +39,7 @@ fixed bugs:
 - fixed bugs in cons_sos?.c: take average of objestimate
 - fixed numerical issue in some heuristics: nearly-integral values that are between the feasibility and the integrality
   tolerance might not have been rounded correctly
+- fixed bug in heur_guideddiving: best solution is now copied to avoid deletion in case of many new solutions
 
 
 SCIP version 2.0.0
